# qhist

./: Cargo.toml  README.md
src/: main.rs
test_data/: gen_data.py  left_tail.txt  right_tail.txt  uniform.txt
