[package]
name = "qhist"
version = "1.0.0"
edition = "2021"
description = "A commandline utility for printing simple histographic data"

authors = [ "Chuck Norris" ]
keywords = [ "commandline", "statistics", "analytics" ]
liscense = "MIT/Apache-2.0"

[dependencies]
structopt = "0.3"
hdrhistogram = "7.5.0"